--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,9 +30,13 @@ android {
 dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.3.0'
-    implementation 'com.google.android.material:material:1.4.0'
+    implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     testImplementation 'junit:junit:4.13.2'
+    implementation 'org.litepal.guolindev:core:3.2.3'
+    implementation 'com.google.android.exoplayer:extension-okhttp:2.17.1'
+    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.gihub.bumptech.glide:glide:4.12.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
